forget to commit -- EDITED index.html -- create .intro-left & main-container ++ css/styles.css -- EDITED -- responsivness working fine -- no big problem encounted

--- a/index.html
+++ b/index.html
@@ -16,7 +16,68 @@
 </head>
 
 <body>
+     <div class="intro-left">
+          <div class="container-fluid full-height">
 
+               <div class="row text-center align-items-center full-height">
+                    <div class="col">
+                         <img class="avatar" src="/img/avatar.jpg" alt="Aubrey Rilla Avatar Image">
+                         <p class="display-6">Aubrey Rilla</p>
+                         <p>Home Designer</p>
+                    </div>
+               </div>
+          </div>
+     </div>
+     <div class="container-fluid">
+          <div class="row">
+               <!-- <div class="col-md-4">
+
+               </div> -->
+               <div class="col-md-8 main-container">
+                    <section class="quote">
+                         <figure>
+                              <blockquote class="blockquote">
+                                   <p>Your home should tell the story of who you are,
+                                        <br />
+                                        and be a collection of what you love.</p>
+                              </blockquote>
+                              <figcaption class="blockquote-footer">
+                                   Nate Berkus, American interior designer <cite title="Source Title">1995</cite>
+                              </figcaption>
+                         </figure>
+                    </section>
+                    <section class="intro">
+                         <h1 class="display-4">Make it Visual &</h1>
+                         <h2 class="display-6 mb-5"> Tell your full story</h2>
+                         <p>
+                              It’s easy to dream about a makeover or renovation for your home, but another to fully nut out what it is you want to achieve from that reno or makeover. It might be as simple as “we need more room”, or it could be complex, like “we need a home that’s beautiful, functional and reflects who we are”.
+                         </p>
+                    </section>
+                    <section class="projects ">
+                         <h2 class="display-6 mb-5">My Projects</h2>
+                         <div class="container-fluid">
+                              <div class="row" gy-5>
+                                   <div class="column col-md-12 col-lg-4 col-xxl-4">
+                                        <img src="img/l1.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                        <img src="img/s2.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                        <img src="img/p3.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                   </div>
+                                   <div class="column col-md-12 col-lg-4 col-xxl-4">
+                                        <img src="img/l4.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                        <img src="img/p2.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                        <img src="img/s5.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                   </div>
+                                   <div class="column col-md-12 col-lg-4 col-xxl-4">
+                                        <img src="img/p1.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                        <img src="img/s3.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                        <img src="img/l6.jpg" alt="Portfolio Images" class="img-fluid img-thumbnail" />
+                                   </div>
+                              </div>
+                    </section>
+
+               </div>
+          </div>
+     </div>
 </body>
 
 </html>
