index.html EDITED -- resolve the link problem for css/styles.css and img/avatar.jpg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
      <!-- adding bootstrap -->
      <link rel="stylesheet" href="css/bootstrap.min.css" />
-     <link rel="stylesheet" href="/css/styles.css" />
+     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
                <div class="row text-center align-items-center full-height">
                     <div class="col">
-                         <img class="avatar" src="/img/avatar.jpg" alt="Aubrey Rilla Avatar Image">
+                         <img class="avatar" src="img/avatar.jpg" alt="Aubrey Rilla Avatar Image">
                          <p class="display-6">Aubrey Rilla</p>
                          <p>Home Designer</p>
                     </div>
